--- a/chinese-version/about-chinese.html
+++ b/chinese-version/about-chinese.html
@@ -42,9 +42,11 @@
                             <li><a data-scroll href="contact-chinese.html" class="int-collapse-menu">联系方式</a>
                             </li>
                             <li class="li-hamburger"><a data-scroll href="rules-chinese.html" class="int-collapse-menu">
-                                ⽐赛</a></li>
+                                    ⽐赛</a></li>
                             <li class="li-hamburger"><a data-scroll href="jury.html" class="int-collapse-menu">
-                                评委会</a></li>
+                                    评委会</a></li>
+                            <li><a data-scroll href="foto.html" class="int-collapse-menu">照片庫</a>
+                            </li>
                         </ul>
                         <div class="languages">
                             <a href="../polish-version-calisia-web/indexpl.html"><img class="img-flag"
@@ -68,9 +70,11 @@
                             <li><a data-scroll href="contact-chinese.html" class="int-collapse-menu">联系方式</a>
                             </li>
                             <li class="li-hamburger"><a data-scroll href="rules-chinese.html" class="int-collapse-menu">
-                                ⽐赛</a></li>
+                                    ⽐赛</a></li>
                             <li class="li-hamburger"><a data-scroll href="jury.html" class="int-collapse-menu">
-                            评委会</a></li>
+                                    评委会</a></li>
+                            <li><a data-scroll href="foto.html" class="int-collapse-menu">照片庫</a>
+                            </li>
                         </ul>
                         <div class="languages-2">
                             <a href="../polish-version-calisia-web/indexpl.html"><img class="img-flag"
@@ -95,13 +99,13 @@
                     <img class="img-kalisz-1" src="slider-images/Kalisz-pic-1.jpg" alt="city, kalisz, view" />
                 </div>
                 <div data-aos="fade-left" data-aos-duration="1000" class="p-1-kalisz">
-                1233年后，⻄⾥⻄亚公爵Henry the Bearded将卡利什的定居中⼼搬到了
-                扎沃⻬以北的新地⽅。
-                ⼤约在1257年，波列斯瓦夫王⼦根据希罗达法建⽴了卡利什。该市的内
-                部区域的特点是两条集市街道的主轴状布局，⼗字路⼝和位于市中⼼的矩
-                形⼴场。这种中世纪的城镇设计⼀直保留到现在。第⼀次世界⼤战在卡利
-                什留下了悲惨的印记。1914年8⽉，普鲁⼠军队摧毁并烧毁了该镇。95%
-                的⽼城建筑被夷为废墟。
+                    1233年后，⻄⾥⻄亚公爵Henry the Bearded将卡利什的定居中⼼搬到了
+                    扎沃⻬以北的新地⽅。
+                    ⼤约在1257年，波列斯瓦夫王⼦根据希罗达法建⽴了卡利什。该市的内
+                    部区域的特点是两条集市街道的主轴状布局，⼗字路⼝和位于市中⼼的矩
+                    形⼴场。这种中世纪的城镇设计⼀直保留到现在。第⼀次世界⼤战在卡利
+                    什留下了悲惨的印记。1914年8⽉，普鲁⼠军队摧毁并烧毁了该镇。95%
+                    的⽼城建筑被夷为废墟。
                 </div>
                 <div data-aos="fade-right" data-aos-duration="1000" class="image-about-1">
                     <img class="img-kalisz-1 img-kalisz-2" src="slider-images/kalisz-pic-3.jpg"
@@ -192,7 +196,7 @@
                     设施和社会⽂化发展为标志。1992年，卡利什教区成⽴。如今卡利什占
                     地70平⽅公⾥，约有11万居⺠。从1975年到1998年，它是卡利什省的⾸
                     府。在⼀个新的⾏政区划中，该市位于维尔科波尔斯基省。卡利什以其魔
-                    法般的美丽着迷，过去与现在交织在⼀起，在卡利什形成了独特的⽓候。 
+                    法般的美丽着迷，过去与现在交织在⼀起，在卡利什形成了独特的⽓候。
                     </br></br>
                     <a class="about-a-site" href="https://www.kalisz.pl/miasto/o-miescie/historia"
                         target="_blank">https://www.kalisz.pl/miasto/o-miescie/historia</a>
@@ -209,8 +213,10 @@
             <div class="title text-center" data-scroll-reveal="enter from the bottom after 0.5s">
                 <div class="aligncenter">
                     <div class="socialFooter">
-                        <a href="https://m.facebook.com/100084549096550/" target="_blank"><i class="fa fa-facebook"></i></a>
-                        <a href="https://www.instagram.com/calisia_arts_foundation/" target="_blank"><i class="fa fa-instagram"></i></a>
+                        <a href="https://m.facebook.com/100084549096550/" target="_blank"><i
+                                class="fa fa-facebook"></i></a>
+                        <a href="https://www.instagram.com/calisia_arts_foundation/" target="_blank"><i
+                                class="fa fa-instagram"></i></a>
                     </div>
                     <p><span class="footer-s-1">&copy; 2022</span><span class="footer-span"> Calisia Arts
                             Foundation</span></br><span class="footer-s-2">Natalia Byrdy Design</span></p>
