--- a/chinese-version/rules-chinese.html
+++ b/chinese-version/rules-chinese.html
@@ -44,6 +44,8 @@
                                 ⽐赛</a></li>
                         <li><a data-scroll href="jury.html" class="int-collapse-menu">评委会</a>
                         </li>
+                        <li><a data-scroll href="foto.html" class="int-collapse-menu">照片庫</a>
+                        </li>
                     </ul>
                     <div class="languages">
                         <a href="../polish-version-calisia-web/indexpl.html"><img class="img-flag"
@@ -65,15 +67,17 @@
                         <li class="li-hamburger"><a data-scroll href="about-chinese.html"
                                 class="int-collapse-menu">简介</a>
                         </li>
-                        <li class="li-hamburger"><a data-scroll href="team-chinese.html"
-                                class="int-collapse-menu"> 团队</a>
+                        <li class="li-hamburger"><a data-scroll href="team-chinese.html" class="int-collapse-menu"></a>
+                                团队</a>
                         </li>
                         <li class="li-hamburger"><a data-scroll href="contact-chinese.html"
                                 class="int-collapse-menu">联系方式</a></li>
                         <li class="li-hamburger"><a data-scroll href="rules-chinese.html" class="int-collapse-menu">
-                            ⽐赛</a></li>
+                                ⽐赛</a></li>
                         <li class="li-hamburger"><a data-scroll href="jury.html" class="int-collapse-menu">
-                            评委会</a></li>
+                                评委会</a></li>
+                        <li><a data-scroll href="foto.html" class="int-collapse-menu">照片庫</a>
+                        </li>
 
                     </ul>
                     <div class="languages-2">
@@ -148,7 +152,8 @@
     <div class="width-form">
         <form>
             <p class="text-application text-competition"> ⽐赛章程
-                <i class="fa-solid fa-arrow-down"></i> </p>
+                <i class="fa-solid fa-arrow-down"></i>
+            </p>
             <a class="download-button" href="2023-Rules-of-the-Competition-CHINESE-1.docx" download>
 
                 <p class="download-text">下载⽐赛章程</p>
@@ -182,7 +187,8 @@
 
                 <div class="socialFooter">
                     <a href="https://m.facebook.com/100084549096550/" target="_blank"><i class="fa fa-facebook"></i></a>
-                    <a href="https://www.instagram.com/calisia_arts_foundation/" target="_blank"><i class="fa fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/calisia_arts_foundation/" target="_blank"><i
+                            class="fa fa-instagram"></i></a>
                 </div>
                 <p><span class="footer-s-1">&copy; 2022</span><span class="footer-span"> Calisia Arts
                         Foundation</span></br><span class="footer-s-2">Natalia Byrdy Design</span></p>
