--- a/chinese-version/team-chinese.html
+++ b/chinese-version/team-chinese.html
@@ -40,6 +40,8 @@
                                 ⽐赛</a></li>
                             <li><a data-scroll href="jury.html" class="int-collapse-menu">评委会</a>
                             </li>
+                            <li><a data-scroll href="foto.html" class="int-collapse-menu">照片庫</a>
+                            </li>
                         </ul>
                         <div class="languages">
                             <a href="../polish-version-calisia-web/indexpl.html"><img class="img-flag" src="slider-images/icons8-poland-48.png" /></a>
@@ -65,6 +67,8 @@
                                 ⽐赛</a></li>
                             <li><a data-scroll href="jury.html" class="int-collapse-menu">
                                 评委会</a>
+                            </li>
+                            <li><a data-scroll href="foto.html" class="int-collapse-menu">照片庫</a>
                             </li>
                         </ul>
                         <div class="languages-2">
