--- a/chinese-version/contact-chinese.html
+++ b/chinese-version/contact-chinese.html
@@ -40,17 +40,23 @@
                             <li><a data-scroll href="about-chinese.html" class="int-collapse-menu">简介</a>
                             </li>
                             <li><a data-scroll href="team-chinese.html" class="int-collapse-menu"> 团队</a></li>
-                            <li class="active"><a data-scroll href="contact-chinese.html" class="int-collapse-menu">联系方式</a>
+                            <li class="active"><a data-scroll href="contact-chinese.html"
+                                    class="int-collapse-menu">联系方式</a>
                             </li>
                             <li class="li-hamburger"><a data-scroll href="rules-chinese.html"
-                                class="int-collapse-menu">⽐赛</a></li>
-                            <li class="li-hamburger"><a data-scroll href="jury.html"
-                                    class="int-collapse-menu">评委会</a></li>
+                                    class="int-collapse-menu">⽐赛</a></li>
+                            <li class="li-hamburger"><a data-scroll href="jury.html" class="int-collapse-menu">评委会</a>
+                            </li>
+                            <li><a data-scroll href="foto.html" class="int-collapse-menu">照片庫</a>
+                            </li>
                         </ul>
                         <div class="languages">
-                            <a href="../polish-version-calisia-web/indexpl.html"><img class="img-flag" src="slider-images/icons8-poland-48.png" /></a>
-                            <a href="../index.html"><img class="img-flag" src="slider-images/icons8-great-britain-48.png" /></a>
-                            <a href="index-chinese.html"><img class="img-flag" src="slider-images/icons8-china-48.png" /></a>
+                            <a href="../polish-version-calisia-web/indexpl.html"><img class="img-flag"
+                                    src="slider-images/icons8-poland-48.png" /></a>
+                            <a href="../index.html"><img class="img-flag"
+                                    src="slider-images/icons8-great-britain-48.png" /></a>
+                            <a href="index-chinese.html"><img class="img-flag"
+                                    src="slider-images/icons8-china-48.png" /></a>
                         </div>
                         <button class="hamburger">
                             <i class="fa-solid fa-bars"></i>
@@ -59,22 +65,28 @@
                     </div>
                     <div class="hamburger-list-div">
                         <ul class="hamburger-list">
-                            <li class="active"><a data-scroll href="index-chinese.html" class="int-collapse-menu">主⻚</a></li>
+                            <li class="active"><a data-scroll href="index-chinese.html" class="int-collapse-menu">主⻚</a>
+                            </li>
                             <li><a data-scroll href="about-chinese.html" class="int-collapse-menu">简介</a>
                             </li>
                             <li><a data-scroll href="team-chinese.html" class="int-collapse-menu"> 团队</a></li>
                             <li><a data-scroll href="contact-chinese.html" class="int-collapse-menu">
-                                競賽</a>
+                                    競賽</a>
                             </li>
                             <li class="li-hamburger"><a data-scroll href="rules-chinese.html"
-                                class="int-collapse-menu">⽐赛</a></li>
-                            <li class="li-hamburger"><a data-scroll href="jury.html"
-                                    class="int-collapse-menu">评委会</a></li>
+                                    class="int-collapse-menu">⽐赛</a></li>
+                            <li class="li-hamburger"><a data-scroll href="jury.html" class="int-collapse-menu">评委会</a>
+                            </li>
+                            <li><a data-scroll href="foto.html" class="int-collapse-menu">照片庫</a>
+                            </li>
                         </ul>
                         <div class="languages-2">
-                            <a href="../polish-version-calisia-web/indexpl.html"><img class="img-flag" src="slider-images/icons8-poland-48.png" /></a>
-                            <a href="../index.html"><img class="img-flag" src="slider-images/icons8-great-britain-48.png" /></a>
-                            <a href="index-chinese.html"><img class="img-flag" src="slider-images/icons8-china-48.png" /></a>
+                            <a href="../polish-version-calisia-web/indexpl.html"><img class="img-flag"
+                                    src="slider-images/icons8-poland-48.png" /></a>
+                            <a href="../index.html"><img class="img-flag"
+                                    src="slider-images/icons8-great-britain-48.png" /></a>
+                            <a href="index-chinese.html"><img class="img-flag"
+                                    src="slider-images/icons8-china-48.png" /></a>
                         </div>
                     </div>
                 </div>
@@ -106,9 +118,11 @@
                         <div class="boldletter">Details </div>
                         <div class="second-line">calisiaarts@gmail.com </br> </br>
 
-                            <span class="bank-account-letters">KRS:</span> 0000933278 兹罗提账户: 57160014621808126950000001 </br>
+                            <span class="bank-account-letters">KRS:</span> 0000933278 兹罗提账户: 57160014621808126950000001
+                            </br>
                             欧元账户: </br> PL03 1600 1462 1808 1269 5000 0003 </br>
-                            <span class="bank-account-letters">SWIFT码</span> - PPABPLPKXXX </br> 如报名，请备注参赛者姓名者姓名， </br>以及组别
+                            <span class="bank-account-letters">SWIFT码</span> - PPABPLPKXXX </br> 如报名，请备注参赛者姓名者姓名，
+                            </br>以及组别
                         </div>
                     </div>
                 </div>
@@ -129,8 +143,10 @@
             <div class="title text-center" data-scroll-reveal="enter from the bottom after 0.5s">
                 <div class="aligncenter">
                     <div class="socialFooter">
-                        <a href="https://m.facebook.com/100084549096550/" target="_blank"><i class="fa fa-facebook"></i></a>
-                        <a href="https://www.instagram.com/calisia_arts_foundation/" target="_blank"><i class="fa fa-instagram"></i></a>
+                        <a href="https://m.facebook.com/100084549096550/" target="_blank"><i
+                                class="fa fa-facebook"></i></a>
+                        <a href="https://www.instagram.com/calisia_arts_foundation/" target="_blank"><i
+                                class="fa fa-instagram"></i></a>
                     </div>
                     <p><span class="footer-s-1">&copy; 2022</span><span class="footer-span"> Calisia Arts
                             Foundation</span></br><span class="footer-s-2">Natalia Byrdy Design</span></p>
