--- a/chinese-version/index-chinese.html
+++ b/chinese-version/index-chinese.html
@@ -44,6 +44,8 @@
                                     ⽐赛</a></li>
                             <li class="li-hamburger"><a data-scroll href="jury.html" class="int-collapse-menu">
                                     评委会</a></li>
+                            <li><a data-scroll href="foto.html" class="int-collapse-menu">照片庫</a>
+                            </li>
                         </ul>
                         <div class="languages">
                             <a href="../polish-version-calisia-web/indexpl.html"><img class="img-flag"
@@ -74,7 +76,8 @@
                                     ⽐赛</a></li>
                             <li class="li-hamburger"><a data-scroll href="jury.html" class="int-collapse-menu">评委会</a>
                             </li>
-
+                            <li><a data-scroll href="foto.html" class="int-collapse-menu">照片庫</a>
+                            </li>
                         </ul>
                         <div class="languages-2">
                             <a href="../polish-version-calisia-web/indexpl.html"><img class="img-flag"
