--- a/index.html
+++ b/index.html
@@ -90,10 +90,9 @@
             <div class="home-content">
                 <div class="tp-caption rev-video customin customout start">
                     <hr class="topline">
-                    <h2 class="h2-index" data-aos="zoom-in" data-aos-duration="1500">International <br> Henryk Melcer
-                        <br> Piano
-                        Competition
-                    </h2>
+                    <h2 class="h2-index" data-aos="zoom-in" data-aos-duration="1500">The 1st <br> Kalisz
+                        <br> Piano Festival
+                        
                     <hr class="bottomline">
                 </div>
                 <img data-aos="fade-up" data-aos-duration="1000" class="img-logo-competition"
