--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <div class="home-content">
                 <div class="tp-caption rev-video customin customout start">
                     <hr class="topline">
-                    <h2 class="h2-index" data-aos="zoom-in" data-aos-duration="1500"><br> Kalisz
+                    <h2 class="h2-index" data-aos="zoom-in" data-aos-duration="1500"><br> I Kalisz
                         <br> Piano Festival
                         
                     <hr class="bottomline">
