--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
             <div class="home-content">
                 <div class="tp-caption rev-video customin customout start">
                     <hr class="topline">
-                    <h2 class="h2-index" data-aos="zoom-in" data-aos-duration="1500"><br> I Kalisz
-                        <br> Piano Festival
+                    <h2 class="h2-index" data-aos="zoom-in" data-aos-duration="1500"> I Kalisz
+                        <br> Piano Festival<br> October 21-23, 2024
                         
                     <hr class="bottomline">
                 </div>
