--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <div class="tp-caption rev-video customin customout start">
                     <hr class="topline">
                     <h2 class="h2-index" data-aos="zoom-in" data-aos-duration="1500"> I Kalisz
-                        <br> Piano Festival<br> October 21-23, 2024
+                        <br> Piano Festival<br> 21.-23.10.2024
                         
                     <hr class="bottomline">
                 </div>
