--- a/polish-version-calisia-web/indexpl.html
+++ b/polish-version-calisia-web/indexpl.html
@@ -85,16 +85,11 @@
             <div class="home-content">
                 <div class="tp-caption rev-video customin customout start">
                     <hr class="topline">
-                    <h2 class="h2-index" data-aos="zoom-in" data-aos-duration="1500"> Międzynarodowy <br> Konkurs Pianistyczny  <br> im. Henryka Melcera</h2>
+                    <h2 class="h2-index" data-aos="zoom-in" data-aos-duration="1500"> I Kaliski  <br> Festiwal Pianistyczny  <br> 21.-23.10.2024 </h2>
                     <hr class="bottomline">
                 </div>
                 <img data-aos="fade-up" data-aos-duration="1000" class="img-logo-competition" src="slider-images/logo-wersja-1.jpg"/>
                 <div class="tp-caption rev-video2 customin customout start">
-                    <div class="deadline">
-                        <a class="download-button" href="HMC-WYNIKI-PL.pdf" target="_blank" download>
-                            Wyniki Konkursu
-                        </a>
-                    </div>
                 </div>
             </div>
         </div>
