--- a/chinese-version/index-chinese.html
+++ b/chinese-version/index-chinese.html
@@ -96,17 +96,13 @@
             <div class="home-content">
                 <div class="tp-caption rev-video customin customout start">
                     <hr class="topline">
-                    <h2 class="h2-index" data-aos="zoom-in" data-aos-duration="1500">第一届亨利克· <br>梅尔瑟国际钢琴比赛</h2>
+                    <h2 class="h2-index" data-aos="zoom-in" data-aos-duration="1500">I Kalisz <br>Piano Festival <br> 21.-23.10.2024</h2> 
                     <hr class="bottomline">
                 </div>
-                <img data-aos="fade-up" data-aos-duration="1000" class="img-logo-competition"
-                    src="slider-images/logo-wersja-1.jpg" />
+                <!-- <img data-aos="fade-up" data-aos-duration="1000" class="img-logo-competition"
+                    src="slider-images/logo-wersja-1.jpg" /> -->
                 <div class="tp-caption rev-video2 customin customout start">
-                    <div class="deadline">
-                        <a class="download-button" href="HMC-RESULTS-ENG.pdf" target="_blank" download>
-                            Results of the Competition
-                        </a>
-                    </div>
+                    
                 </div>
             </div>
         </div>
