--- a/polish-version-calisia-web/indexpl.html
+++ b/polish-version-calisia-web/indexpl.html
@@ -88,7 +88,7 @@
                     <h2 class="h2-index" data-aos="zoom-in" data-aos-duration="1500"> I Kaliski  <br> Festiwal Pianistyczny  <br> 21.-23.10.2024 </h2>
                     <hr class="bottomline">
                 </div>
-                <img data-aos="fade-up" data-aos-duration="1000" class="img-logo-competition" src="slider-images/logo-wersja-1.jpg"/>
+                <!-- <img data-aos="fade-up" data-aos-duration="1000" class="img-logo-competition" src="slider-images/logo-wersja-1.jpg"/> -->
                 <div class="tp-caption rev-video2 customin customout start">
                 </div>
             </div>
