--- a/index.html
+++ b/index.html
@@ -89,16 +89,16 @@
         <div class="home-image">
             <div class="home-content">
                 <div class="tp-caption rev-video customin customout start">
-                    <hr class="topline">
-                    <h2 class="h2-index" data-aos="zoom-in" data-aos-duration="1500"> I Kalisz
-                        <br> Piano Festival<br> 21.-23.10.2024
-                        
-                    <hr class="bottomline">
+                    <div class="h2-index-box">
+                        <h2 class="h2-index" data-aos="zoom-in" data-aos-duration="1500"> I Kalisz
+                            <br> Piano Festival<br> 21.-23.10.2024
+                    </div>
+
                 </div>
-                <img data-aos="fade-up" data-aos-duration="1000" class="img-logo-competition"
-                    src="slider-images/logo-wersja-1.jpg" />
+                <!-- <img data-aos="fade-up" data-aos-duration="1000" class="img-logo-competition"
+                    src="slider-images/logo-wersja-1.jpg" /> -->
                 <div class="tp-caption rev-video2 customin customout start">
-                   
+
                 </div>
             </div>
         </div>
@@ -115,7 +115,7 @@
                         <a href="https://www.instagram.com/calisia_arts_foundation/" target="_blank"><i
                                 class="fa fa-instagram"></i></a>
                     </div>
-                    <p><span class="footer-s-1">&copy; 2022</span><span class="footer-span"> Calisia Arts
+                    <p><span class="footer-s-1">&copy; 2024</span><span class="footer-span"> Calisia Arts
                             Foundation</span></br><span class="footer-s-2">Natalia Byrdy Design</span></p>
                 </div>
             </div>
