--- a/polish-version-calisia-web/indexpl.html
+++ b/polish-version-calisia-web/indexpl.html
@@ -84,12 +84,16 @@
         <div class="home-image">
             <div class="home-content">
                 <div class="tp-caption rev-video customin customout start">
-                    <hr class="topline">
-                    <h2 class="h2-index" data-aos="zoom-in" data-aos-duration="1500"> I Kaliski  <br> Festiwal Pianistyczny  <br> 21.-23.10.2024 </h2>
-                    <hr class="bottomline">
+                    <div class="h2-index-box">
+                        <h2 class="h2-index" data-aos="zoom-in" data-aos-duration="1500"> I Kaliski
+                            <br> Festiwal Pianistyczny<br> 21.-23.10.2024
+                    </div>
+
                 </div>
-                <!-- <img data-aos="fade-up" data-aos-duration="1000" class="img-logo-competition" src="slider-images/logo-wersja-1.jpg"/> -->
+                <!-- <img data-aos="fade-up" data-aos-duration="1000" class="img-logo-competition"
+                    src="slider-images/logo-wersja-1.jpg" /> -->
                 <div class="tp-caption rev-video2 customin customout start">
+
                 </div>
             </div>
         </div>
@@ -105,7 +109,7 @@
                         <a href="https://m.facebook.com/100084549096550/" target="_blank"><i class="fa fa-facebook"></i></a>
                         <a href="https://www.instagram.com/calisia_arts_foundation/" target="_blank"><i class="fa fa-instagram"></i></a>
                     </div>
-                    <p><span class="footer-s-1">&copy; 2022</span><span class="footer-span"> Calisia Arts
+                    <p><span class="footer-s-1">&copy; 2024</span><span class="footer-span"> Calisia Arts
                             Foundation</span></br><span class="footer-s-2">Natalia Byrdy Design</span></p>
                 </div>
             </div>
