--- a/chinese-version/index-chinese.html
+++ b/chinese-version/index-chinese.html
@@ -101,12 +101,16 @@
                     </div>
 
                 </div>
-                <!-- <img data-aos="fade-up" data-aos-duration="1000" class="img-logo-competition"
-                    src="slider-images/logo-wersja-1.jpg" /> -->
-                <div class="tp-caption rev-video2 customin customout start">
+                <div class="logo-box">
+                    <img data-aos="fade-up" data-aos-duration="1000" class="img-logo-competition"
+                        src="slider-images/logo.svg" />
+                    <div class="tp-caption rev-video2 customin customout start">
 
+                    </div>
                 </div>
+
             </div>
+        </div>
         </div>
     </section>
 
