--- a/polish-version-calisia-web/indexpl.html
+++ b/polish-version-calisia-web/indexpl.html
@@ -33,7 +33,8 @@
                         <a href="indexpl.html"><img class="logo-calisia" src="slider-images/calisia-format.png"
                                 alt="logo, gold letters, calisia arts" /></a>
                         <ul class="nav navbar-nav">
-                            <li class="active"><a data-scroll href="indexpl.html" class="int-collapse-menu">Home</a></li>
+                            <li class="active"><a data-scroll href="indexpl.html" class="int-collapse-menu">Home</a>
+                            </li>
                             <li><a data-scroll href="about-pl.html" class="int-collapse-menu">O Kaliszu</a>
                             </li>
                             <li><a data-scroll href="team-pl.html" class="int-collapse-menu">Zespół</a></li>
@@ -45,8 +46,10 @@
                         </ul>
                         <div class="languages">
                             <a href="indexpl.html"><img class="img-flag" src="slider-images/icons8-poland-48.png" /></a>
-                            <a href="../index.html"><img class="img-flag" src="slider-images/icons8-great-britain-48.png" /></a>
-                            <a href="../chinese-version/index-chinese.html"><img class="img-flag" src="slider-images/icons8-china-48.png" /></a>
+                            <a href="../index.html"><img class="img-flag"
+                                    src="slider-images/icons8-great-britain-48.png" /></a>
+                            <a href="../chinese-version/index-chinese.html"><img class="img-flag"
+                                    src="slider-images/icons8-china-48.png" /></a>
                         </div>
                         <button class="hamburger">
                             <i class="fa-solid fa-bars"></i>
@@ -54,12 +57,14 @@
                     </div>
                     <div class="hamburger-list-div">
                         <ul class="hamburger-list">
-                            <li class="li-hamburger"><a data-scroll href="indexpl.html" class="int-collapse-menu">Home</a>
+                            <li class="li-hamburger"><a data-scroll href="indexpl.html"
+                                    class="int-collapse-menu">Home</a>
                             </li>
-                            <li class="li-hamburger"><a data-scroll href="about-pl.html"
-                                    class="int-collapse-menu">O Kaliszu</a>
+                            <li class="li-hamburger"><a data-scroll href="about-pl.html" class="int-collapse-menu">O
+                                    Kaliszu</a>
                             </li>
-                            <li class="li-hamburger"><a data-scroll href="team-pl.html" class="int-collapse-menu">Zespół</a>
+                            <li class="li-hamburger"><a data-scroll href="team-pl.html"
+                                    class="int-collapse-menu">Zespół</a>
                             </li>
                             <li class="li-hamburger"><a data-scroll href="contact-pl.html"
                                     class="int-collapse-menu">Kontakt</a></li>
@@ -69,8 +74,10 @@
                         </ul>
                         <div class="languages-2">
                             <a href="indexpl.html"><img class="img-flag" src="slider-images/icons8-poland-48.png" /></a>
-                            <a href="../index.html"><img class="img-flag" src="slider-images/icons8-great-britain-48.png" /></a>
-                            <a href="../chinese-version/index-chinese.html"><img class="img-flag" src="slider-images/icons8-china-48.png" /></a>
+                            <a href="../index.html"><img class="img-flag"
+                                    src="slider-images/icons8-great-britain-48.png" /></a>
+                            <a href="../chinese-version/index-chinese.html"><img class="img-flag"
+                                    src="slider-images/icons8-china-48.png" /></a>
                         </div>
 
                     </div>
@@ -90,10 +97,12 @@
                     </div>
 
                 </div>
-                <!-- <img data-aos="fade-up" data-aos-duration="1000" class="img-logo-competition"
-                    src="slider-images/logo-wersja-1.jpg" /> -->
-                <div class="tp-caption rev-video2 customin customout start">
+                <div class="logo-box">
+                    <img data-aos="fade-up" data-aos-duration="1000" class="img-logo-competition"
+                        src="slider-images/logo.svg" />
+                    <div class="tp-caption rev-video2 customin customout start">
 
+                    </div>
                 </div>
             </div>
         </div>
@@ -104,10 +113,12 @@
         <div data-aos="zoom-in" data-aos-duration="1000" class="container">
             <div class="title text-center">
                 <div class="aligncenter">
-                    
+
                     <div class="socialFooter">
-                        <a href="https://m.facebook.com/100084549096550/" target="_blank"><i class="fa fa-facebook"></i></a>
-                        <a href="https://www.instagram.com/calisia_arts_foundation/" target="_blank"><i class="fa fa-instagram"></i></a>
+                        <a href="https://m.facebook.com/100084549096550/" target="_blank"><i
+                                class="fa fa-facebook"></i></a>
+                        <a href="https://www.instagram.com/calisia_arts_foundation/" target="_blank"><i
+                                class="fa fa-instagram"></i></a>
                     </div>
                     <p><span class="footer-s-1">&copy; 2024</span><span class="footer-span"> Calisia Arts
                             Foundation</span></br><span class="footer-s-2">Natalia Byrdy Design</span></p>
