--- a/festival.html
+++ b/festival.html
@@ -19,9 +19,11 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Main Stylesheet CSS -->
-    <link rel="stylesheet" href="style.css?id=9">
+    <link rel="stylesheet" href="rules.css?id=8">
+
     <!-- SLIDER REVOLUTION 4.x CSS SETTINGS -->
     <link rel="stylesheet" type="text/css" href="rs-plugin/css/settings.css" media="screen" />
+
 </head>
 
 <body>
@@ -33,16 +35,16 @@
                         <a href="index.html"><img class="logo-calisia" src="slider-images/calisia-format.png"
                                 alt="logo, gold letters, calisia arts" /></a>
                         <ul class="nav navbar-nav">
-                            <li class="active"><a data-scroll href="index.html" class="int-collapse-menu">Home</a></li>
+                            <li><a data-scroll href="index.html" class="int-collapse-menu">Home</a></li>
                             <li><a data-scroll href="about.html" class="int-collapse-menu">About</a>
                             </li>
                             <li><a data-scroll href="team.html" class="int-collapse-menu">Team</a></li>
                             <li><a data-scroll href="contact.html" class="int-collapse-menu">Contact</a>
                             </li>
-                            <li><a data-scroll href="rules.html" class="int-collapse-menu">Competition</a></li>
-                            <li><a data-scroll href="festival.html" class="int-collapse-menu">Festival</a></li>
+                            <li class="active"><a data-scroll href="rules.html"
+                                    class="int-collapse-menu">Competition</a></li>
+                            </li>
                             <li><a data-scroll href="foto.html" class="int-collapse-menu">Gallery</a></li>
-
                         </ul>
                         <div class="languages">
                             <a href="polish-version-calisia-web/indexpl.html"><img class="img-flag"
@@ -68,7 +70,6 @@
                             <li class="li-hamburger"><a data-scroll href="contact.html"
                                     class="int-collapse-menu">Contact</a></li>
                             <li><a data-scroll href="rules.html" class="int-collapse-menu">Competition</a></li>
-                            <li><a data-scroll href="festival.html" class="int-collapse-menu">Festival</a></li>
                             <li><a data-scroll href="foto.html" class="int-collapse-menu">Gallery</a></li>
                         </ul>
                         <div class="languages-2">
@@ -86,32 +87,93 @@
         </div>
 
     </header>
+    <section class="contact">
+        <div data-aos="zoom-in" data-aos-duration="1000" class="team-h">
+            <h1 class="h1-team">The Competition</h1>
+        </div>
+        <p class="text-application width-form">
+            The 1st International Henryk Melcer Piano Competition aims to discover and promote
+            talented pianists from all over the world.
+            The patron of the competition is Henryk Melcer, an outstanding composer and pianist
+            closely associated with Kalisz, who was sadly forgotten after his death and is currently not
+            known to a wider circle of music lovers.
+            Winners of the competition will perform in concert halls in Poland and Austria, while
+            selected participants will have the opportunity to take part in master classes organised by
+            the Calisia Arts foundation, which will be conducted by renowned pianists and
+            pedagogues.
+            In addition to performances at the final concerts, there will be cash prizes for the winners.
+        </p>
+        <div class="width-form border-competition">
 
-    <section id="home">
-        <div class="home-image">
-            <div class="home-content">
-                <div class="tp-caption rev-video customin customout start">
-                    <div class="h2-index-box">
-                        <h2 class="h2-index" data-aos="zoom-in" data-aos-duration="1500"> I Kalisz
-                            <br> Piano Festival<br> 21.-23.10.2024
-                    </div>
+        </div>
 
+        </div>
+        <div class="container-photo">
+            <div data-aos="fade-right" data-aos-duration="1000" class="image-about-1">
+                <img class="img-kalisz-1 img-kalisz-2" src="slider-images/lukasz prowadzi kursy.jpg"
+                    alt="city, kalisz, view" />
+                <div class="label-photo">
+                    Masterclass with Jury member Łukasz Byrdy in Canada
                 </div>
-                <div class="logo-box">
-                    <img data-aos="fade-up" data-aos-duration="1000" class="img-logo-competition"
-                        src="slider-images/logo.svg" />
-                    <div class="tp-caption rev-video2 customin customout start">
+            </div>
+            <div data-aos="fade-right" data-aos-duration="1000" class="image-about-2">
+                <img class="img-kalisz-1 img-kalisz-2" src="slider-images/PSM Kalisz recital Lukasza .jpg"
+                    alt="city, kalisz, view" />
+                <div class="label-photo">
+                    Prizewinners' concert venue in Kalisz
+                </div>
+            </div>
+            <div class="small-photo-container">
+                <div data-aos="fade-right" data-aos-duration="1000" class="image-about-2">
+                    <img class="img-kalisz-1 img-kalisz-2" src="slider-images/wiedeń .jpg" alt="city, kalisz, view" />
+                    <div class="label-photo width-label">
+                        Prizewinners' concert venue in Vienna
+                    </div>
+                </div>
 
+                <div data-aos="fade-right" data-aos-duration="1000" class="image-about-2">
+                    <img class="img-kalisz-1 img-kalisz-2" src="slider-images/wiedeń 2.jpg" alt="city, kalisz, view" />
+                    <div class="label-photo">
+                        Prizewinners' concert venue in Vienna
                     </div>
                 </div>
             </div>
         </div>
-    </section>
+        <div class="width-form border-competition">
 
+        </div>
+        <div class="width-form">
+            <form>
+                <p class="text-application text-competition"> Rules of the competition <i
+                        class="fa-solid fa-arrow-down"></i> </p>
+                <a class="download-button" href="Rules Melcer Competition - ENG.docx" download>
+
+                    <p class="download-text">Download rules of the competition</p>
+
+                </a>
+            </form>
+        </div>
+    </section>
+    <section class="contact">
+
+        <div class="width-form">
+            <p class="text-application text-competition">Send your application to our e-mail: <spam
+                    class="bank-account-letters">
+                    calisiaarts@gmail.com</spam> <i class="fa-solid fa-arrow-down"></i>
+            </p>
+            <form>
+                <a class="download-button" href="Application form .docx" download>
+
+                    <p class="download-text-2">Download Application</p>
+
+                </a>
+            </form>
+        </div>
+    </section>
     <!--/ FOOTER SECTION-->
     <section id="footer" class="footer-wrapper text-center">
         <div data-aos="zoom-in" data-aos-duration="1000" class="container">
-            <div class="title text-center">
+            <div class="title text-center" data-scroll-reveal="enter from the bottom after 0.5s">
                 <div class="aligncenter">
                     <div class="socialFooter">
                         <a href="https://m.facebook.com/100084549096550/" target="_blank"><i
@@ -119,89 +181,16 @@
                         <a href="https://www.instagram.com/calisia_arts_foundation/" target="_blank"><i
                                 class="fa fa-instagram"></i></a>
                     </div>
-                    <p><span class="footer-s-1">&copy; 2024</span><span class="footer-span"> Calisia Arts
+                    <p><span class="footer-s-1">&copy; 2022</span><span class="footer-span"> Calisia Arts
                             Foundation</span></br><span class="footer-s-2">Natalia Byrdy Design</span></p>
                 </div>
             </div>
     </section>
+    <script src="js/about.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
     </script>
-    <script src="js/about.js"></script>
-    <script src="js/jquery.js"></script>
-    <script src="js/bootstrap.js"></script>
-    <script src="js/smooth-scroll.js"></script>
-    <script src="js/jquery.jigowatt.js"></script>
-    <script src="js/custom.js"></script>
-    <script src="js/jquery.unveilEffects.js"></script>
-    <script src="js/jquery.isotope.min.js"></script>
-    <script>
-        (function ($) {
-            var $container = $('.masonry_wrapper'),
-                colWidth = function () {
-                    var w = $container.width(),
-                        columnNum = 1,
-                        columnWidth = 0;
-                    if (w > 1200) {
-                        columnNum = 3;
-                    } else if (w > 900) {
-                        columnNum = 3;
-                    } else if (w > 600) {
-                        columnNum = 2;
-                    } else if (w > 300) {
-                        columnNum = 1;
-                    }
-                    columnWidth = Math.floor(w / columnNum);
-                    $container.find('.item').each(function () {
-                        var $item = $(this),
-                            multiplier_w = $item.attr('class').match(/item-w(\d)/),
-                            multiplier_h = $item.attr('class').match(/item-h(\d)/),
-                            width = multiplier_w ? columnWidth * multiplier_w[1] - 4 : columnWidth - 4,
-                            height = multiplier_h ? columnWidth * multiplier_h[1] * 0.5 - 4 : columnWidth *
-                                0.5 - 4;
-                        $item.css({
-                            width: width,
-                            height: height
-                        });
-                    });
-                    return columnWidth;
-                }
-
-            function refreshWaypoints() {
-                setTimeout(function () { }, 1000);
-            }
-
-            $('nav.portfolio-filter ul li a').on('click', function () {
-                var selector = $(this).attr('data-filter');
-                $container.isotope({
-                    filter: selector
-                }, refreshWaypoints());
-                $('nav.portfolio-filter ul li a').removeClass('active');
-                $(this).addClass('active');
-                return false;
-            });
-
-            function setPortfolio() {
-                setColumns();
-                $container.isotope('reLayout');
-            }
-
-            isotope = function () {
-                $container.isotope({
-                    resizable: true,
-                    itemSelector: '.item',
-                    masonry: {
-                        columnWidth: colWidth(),
-                        gutterWidth: 0
-                    }
-                });
-            };
-            isotope();
-            $(window).smartresize(isotope);
-        }(jQuery));
-    </script>
-
 
 </body>
 
